[project]
name = "pubsub-broker"
version = "0.1.0"
description = "Lightweight general-purpose pub/sub broker for a single Render free-tier instance"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiosqlite>=0.20",
    "httpx>=0.27",          # webhook delivery
    "pydantic>=2.9",
    "pyjwt[crypto]>=2.9",   # OAuth JWT/JWKS validation
    "python-dotenv>=1.0",   # load .env for local development
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "pyright>=1.1.380",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/broker"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
